# Pitwall

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  CONTEXT.md  DEVELOPMENT.md  README.md  ROADMAP.md  START-HERE.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: .portability-deny.txt  MCP-SETUP.md  settings.json
.claude/reference/: external-resources.md  (+4 more)
.standards/: adoption.json  language-mappings.md  standards-core.md  waivers.schema.json
docs/: development-log.md  development-philosophy.md
getting-started/: index.html
graphify-out/: GRAPH_REPORT.md  Pitwall-callflow.html  graph.html  graph.json  manifest.json
scripts/: capture_openf1_session.py  derive_game_literals.py  derive_live_literals.py  derive_map_literals.py  derive_tower_literals.py  derive_view_literals.py  make_openf1_excerpt.py
search/: search_index.json
ship/: live-validation-checklist.md
stylesheets/: pitwall.css
tests/: conftest.py  test_app.py  test_base.py  test_cache_entities.py  test_capture_script.py  test_cells.py  test_cli.py  test_config.py  test_db.py  test_errors.py  test_freshness.py  test_game_model.py  test_game_score.py  test_game_wizard.py  test_jolpica.py  test_live_source.py  test_live_timing.py  test_live_views.py  test_models.py  test_openf1_client.py  test_openf1_live.py  test_openf1_location.py  test_openf1_models.py  test_openf1_sessions.py  test_profiles.py  test_replay.py  test_results.py  test_schedule.py  test_season.py  test_standings.py  test_store.py  test_strategy.py  test_track_map.py
www/: dev-log.md  getting-started.md  index.md
(+90 files in other folders)
