[project]
name = "pitwall"
version = "0.3.0"
description = "Terminal-UI companion for Formula 1: season tracker, live timing + track map, strategy mini-game"
requires-python = ">=3.13"
dependencies = [
    "textual>=3.0",
    "httpx>=0.28",
]

[project.scripts]
pitwall = "pitwall.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-asyncio",
    "ruff>=0.8",
    "ty",
]
docs = [
    "mkdocs-material>=9.7.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitwall"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/pitwall"]
addopts = "--doctest-modules"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
src = ["src"]
line-length = 120
exclude = [
    "external",
    "node_modules",
    ".venv",
    "lab",
    "build",
    "docs",
]

[tool.ruff.lint]
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E",
    "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
ignore = [
    "E501",
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["external", "lab"]
